--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ version: @version@
 main: de.daschi.nochunkgenerator.NoChunkGenerator
 api-version: 1.16
 load: STARTUP
-description: Generate empty chunks
+description: Generate no chunks.
